--- a/content/classes/NRES803/Week_2/lab_2.Rmd
+++ b/content/classes/NRES803/Week_2/lab_2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Week 2 Lab"
 author: "Drew Tyre"
-date: "2017-08-01"
+date: "2020-08-25"
 output: html_document
 weight: 803021
 ---
@@ -17,7 +17,9 @@ This week will give you further practice with making plots, estimating linear mo
 Load the NRES803 package. If you are using the lab template, this can go in the setup chunk.
 
 ```{r}
-library(NRES803)
+library("tidyverse")
+library("broom")
+library("NRES803")
 data(RIKZ)
 dim(RIKZ)
 ```
@@ -33,7 +35,6 @@ dim(RIKZ)
 You can see that we now have one more variable than before. Now we want to plot species richness against NAP, which is a measure of how far up the beach the sampling location is.
 
 ```{r}
-library(ggplot2) # unnecessary if you're using the template
 # make "Beach" into a factor otherwise treated as continuous
 RIKZ$fBeach <- factor(RIKZ$Beach)
 Richness_NAP <- ggplot(RIKZ, aes(x = NAP, y = Richness)) + 
@@ -51,7 +52,6 @@ summary(RIKZ_model.1)
 You've already done some interpretation of that model in the [readiness assessment](/classes/NRES803/readiness/). Let's take a look at the assumptions of that model.
 
 ```{r, results='hold'}
-library(broom)
 test_RIKZ <- augment(RIKZ_model.1, data=RIKZ)
 ggplot(test_RIKZ, aes(x = .fitted, y = .resid)) + 
   geom_point(aes(color=fBeach)) + 
