emphasize change in variable for next to last question

--- a/content/classes/NRES803/Week_5/lab_5.Rmd
+++ b/content/classes/NRES803/Week_5/lab_5.Rmd
@@ -281,7 +281,7 @@ ggplot(data = pred.p,
 
 ```
 
-(@) Go back and make a new plot for the effect of isolation that includes the 95% confidence region.
+(@) Go back and make a new plot for the effect of *isolation* (not area) that includes the 95% confidence region. 
 
 What would happen if we used AIC model selection on this dataset?
 
